compiler/acton/test/syntaxerrors/err19.act
# Invalid use of else without if
def orphan_else():
    else:
        pass